--- a/Reaction/style.css
+++ b/Reaction/style.css
@@ -144,6 +144,10 @@ section > h2{
   height: 600px;
   border: 1px solid #222;
   border-radius: 50px;  
+  background-image: url(./images/netflix.jpg);
+  background-position: 20% 80%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 #clone > .wrap > article{
   flex: 1;
@@ -222,6 +226,66 @@ section > h2{
   height: 280px;
   border-radius: 20px;
   border: 1px solid var(--color-font);
+}
+#publising > .item > div:nth-of-type(1){
+  width: 420px;
+  height: 280px;
+  border-radius: 20px;
+  border: 1px solid var(--color-font);
+  background-image: url(./images/grid.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#publising > .item > div:nth-of-type(2){
+  width: 420px;
+  height: 280px;
+  border-radius: 20px;
+  border: 1px solid var(--color-font);
+  background-image: url(./images/chart.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+#publising > .item > div:nth-of-type(3){
+  width: 420px;
+  height: 280px;
+  border-radius: 20px;
+  border: 1px solid var(--color-font);
+  background-image: url(./images/date.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+#publising > .item > div:nth-of-type(4){
+  width: 420px;
+  height: 280px;
+  border-radius: 20px;
+  border: 1px solid var(--color-font);
+  background-image: url(./images/parallax.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+#publising > .item > div:nth-of-type(5){
+  width: 420px;
+  height: 280px;
+  border-radius: 20px;
+  border: 1px solid var(--color-font);
+  background-image: url(./images/scroll.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+#publising > .item > div:nth-of-type(6){
+  width: 420px;
+  height: 280px;
+  border-radius: 20px;
+  border: 1px solid var(--color-font);
+  background-image: url(./images/carousel.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  background-color: #fff;
 }
 
 /*** 모바일/태블릿 사이즈 통일 ***/
