--- a/FinalProject/style.css
+++ b/FinalProject/style.css
@@ -923,14 +923,14 @@
   color: #006a67;
   font-weight: bolder;
   padding-bottom: 30px;
-  text-shadow:1px 3px 3px #999;
+  /* text-shadow:1px 3px 3px #fff; */
 }
 #FOOTER > .f-img >p:nth-of-type(2){
   font-size: 60px;
   color: #006a67;
   font-weight: bolder;
   padding-bottom: 100px;
-  text-shadow:1px 3px 3px #999;
+  /* text-shadow:1px 3px 3px #fff; */
 }
 #FOOTER > .f-img >p:nth-of-type(3){
   font-family:'JalnanGothic'; 
