--- a/FinalProject/style.css
+++ b/FinalProject/style.css
@@ -1042,18 +1042,18 @@
     color: #003161;    
     line-height: 50px;
   }
-  #ABOUT-ME > .resume>.profile>.education>.edu-main >.edu-num>p:nth-of-type(1){
-    margin-bottom: 30px;
+  #ABOUT-ME > .resume>.profile> .education p,
+  #ABOUT-ME > .resume>.profile> .career p
+  {
+    font-size: 13px;
   }
-  #ABOUT-ME > .resume>.profile>.career > .career-main>.career-num>p:nth-of-type(1){
-   margin-bottom: 30px;
-  }
-  #ABOUT-ME > .resume>.profile>.career > .career-main>.career-contain>p:nth-of-type(2){
-    margin-bottom: 30px;
-  }
+
   #ABOUT-ME > .resume>.Certificate{
     width: 100%;
     padding-left: 0;
+  }
+  #ABOUT-ME > .resume>.Certificate>.certi-main>.certi-contain>p{
+    font-size: 15px;
   }
   #ABOUT-ME > .resume>.Project{
     display: none;
@@ -1260,22 +1260,26 @@ width: 80%;
   }
   #FOOTER > .f-img >p:nth-of-type(1)
 {
-    font-size: 35px;
+    font-size: 30px;
     padding: 0 15px;
     word-break: keep-all;
     padding-bottom: 20px;
     color: #003161;
+    font-family:'JalnanGothic';
+    font-weight: lighter;
   }
   #FOOTER > .f-img >p:nth-of-type(2){
-    font-size: 30px;
+    font-size: 22px;
     padding: 0 20px;
+    font-family:'JalnanGothic';
+    font-weight: lighter;
     padding-bottom: 20px;
     word-break: keep-all;
     line-height: 40px;
     color: #003161;
   }
   #FOOTER > .f-img >p:nth-of-type(3){
-    font-size: 30px;
+    font-size: 30px;  
   }
   #FOOTER > .f-img > .footer>p:nth-of-type(3){
     display: none;
